[package]
name = "json_partial"
version = "0.2.0"
edition = "2021"
description = "Parse Imperfect Json given by LLMs"
authors = ["Abhishek Tripathi <abhishek.tripathi456@gmail.com>"]
repository = "https://github.com/TwistingTwists/json_partial"
license = "MIT OR Apache-2.0"
keywords = ["serde", "llm", "json"]
homepage = "https://crates.io/crates/json_partial"
readme        = "README.md"
documentation = "https://docs.rs/json_partial"

[dependencies]
anyhow = "1.0.95"
log = "0.4.20"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
test-log = "0.2.16"
