[package]
name = "json_partial-python"
version = "0.1.0"
edition = "2021"
authors = ["Abhishek Tripathi <abhishek.tripathi456@gmail.com"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "json_partial_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
json_partial = {path = "../../"}
