[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "jsonish"
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["structured outputs", "agents", "llm"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/TwistingTwists/json_partial"
Source = "https://github.com/TwistingTwists/json_partial"


# [project.optional-dependencies]
# testing = ["pytest","pydantic"]

[tool.maturin]
# python-source = "py_src"
features = ["pyo3/extension-module"]
module-name = "jsonish"

# [tool.uv.config-settings]
# # Faster feedback on Rust builds
# build-args = ["--profile=dev"]

[tool.uv]
cache-keys = ["pyproject.toml", "Cargo.toml", "src/*.rs"]

[dependency-groups]
dev = [
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
]

# [tool.uv.sources]
# setup = { workspace = true }

# [tool.uv.workspace]
# members = ["json_partial_py"]
